welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: value || is not a member of (Boolean, Boolean)
	if (((a>0, b<0) || (a<0 && b>0)) || (negative=true && a<0 && b<0))
                        ^